@@ -9,6 +9,7 @@
   when: Når
   then: Så
   and: Og
+  but: Men
 "de":
   feature: Funktionalität
   scenario: Szenario
@@ -17,6 +18,7 @@
   when: Wenn
   then: Dann
   and: Und
+  but: Aber
 "en":
   feature: Feature
   scenario: Scenario
@@ -25,6 +27,7 @@
   when: When
   then: Then
   and: And
+  but: But
 "es":
   feature: Característica
   scenario: Escenario
@@ -33,6 +36,7 @@
   when: Cuando
   then: Entonces
   and: Y
+  but: Pero
 "fr":
   feature: Fonction
   scenario: Scenario
@@ -41,6 +45,7 @@
   when: Lorsque
   then: Alors
   and: Et
+  but: Mais
 "no":
   feature: Egenskap
   scenario: Scenario
@@ -49,6 +54,7 @@
   when: Når
   then: Så
   and: Og
+  but: Men
 "pt":
   feature: Característica
   scenario: Cenário
@@ -57,6 +63,7 @@
   when: Quando
   then: Então
   and: E
+  but: Mas
 "ru":
   feature: Функционал
   scenario: Сценарий
@@ -65,6 +72,7 @@
   when: Если
   then: То
   and: И
+  but: Но
 "se":
   feature: Egenskap
   scenario: Scenario
@@ -73,6 +81,7 @@
   when: Når
   then: Så
   and: Och
+  but: Men
 "et":
   feature: Omadus
   scenario: Stsenaarium
@@ -81,3 +90,4 @@
   when: Kui
   then: Siis
   and: Ja
+  but: Kuid
