@@ -142,7 +142,7 @@ grammar Feature
   end
 
   rule step_keyword
-    '<%= words['given'] %>' / '<%= words['when'] %>' / '<%= words['then'] %>' / '<%= words['and'] %>'
+    '<%= words['given'] %>' / '<%= words['when'] %>' / '<%= words['then'] %>' / '<%= words['and'] %>' / '<%= words['but'] %>'
   end
   
   rule scenario_keyword
